--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.3.1",
+    "react-tsparticles": "^2.12.2",
     "sass": "^1.69.5",
+    "tsparticles": "^2.12.0",
+    "tsparticles-engine": "^2.12.0",
     "vite-plugin-sass": "^0.1.0"
   },
   "devDependencies": {
