--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18next": "^23.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-i18next": "^13.3.1",
     "react-icons": "^4.11.0",
     "react-tsparticles": "^2.12.2",
