--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vite-plugin-sass": "^0.1.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.10",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
